finished most of middle section , still need to add last 2 <a> tags for links on images, also began guide card section

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&family=Orbitron:wght@400..900&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -12,19 +15,39 @@
         </div>
         
         <!-- ACTIVITIES SECTION -->
-        <div>
+        <div class="activities-section">
             <h3>Top three activities to do in Nebraska City</h3>
-            <img src="images/park.jpg">
-            <img src="images/theatre.jpg">
-            <img src="images/sports.jpg">
+            <div class="activities">
+            <div class="activities-info">
+               <a href="https://outdoornebraska.gov/location/arbor-lodge/" target="_blank"> <img src="images/arbor-lodge-park.jpg"></a>
+                <p class="bold">parks</p>
+                <p> enjoy nature and wildlife as visit arbor lodge park and the arbor mansion</p>
+            </div>
+            <div class="activities-info">
+                <img src="images/neb-city-movies.jpg">
+                <p class="bold">movie theatre</p>
+                <p>whether its a horror flick or the minecraft movie find screams or laughs at pioneer theatre!</p>
+            </div>
+            <div class="activities-info">
+                <img src="images/neb-city-disc.jpg">
+                <p class="bold">sports</p>
+                <p>get out and sweat a little at wildwood disc golf course, but watch your second throw on hole 2 or youll be going for a swim!</p>
+            </div>
+            </div>
         </div>
 
         <!-- GUIDE SECTION -->
-        <div>
+         <div class="guide-section">
+        <div class="info-card">
+            <img src="images/per.jpg">
+            <div class="guide-info">
             <h3>Your guide</h3>
             <p>"I have lived at Torshov for over 30 years, so I can show you all of its best parts and hidden secrets."</p>
             <h4>Per Harald Borgen</h4>
-            <img src="images/per.jpg">
+            </div>
+            
+        </div>
+
         </div>
     </body>
 </html>
