--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                 <p> enjoy nature and wildlife as visit arbor lodge park and the arbor mansion</p>
             </div>
             <div class="activities-info">
-                <img src="images/neb-city-movies.jpg">
+                <a href="https://www.acxcinemas.com/movie-theater/pioneer3" target="_blank"> <img src="images/neb-city-movies.jpg"></a>
                 <p class="bold">movie theatre</p>
                 <p>whether its a horror flick or the minecraft movie find screams or laughs at pioneer theatre!</p>
             </div>
             <div class="activities-info">
-                <img src="images/neb-city-disc.jpg">
+                <a href="https://udisc.com/courses/wildwood-disc-golf-course-a8rd" target="_blank" > <img src="images/neb-city-disc.jpg"></a>
                 <p class="bold">sports</p>
                 <p>get out and sweat a little at wildwood disc golf course, but watch your second throw on hole 2 or youll be going for a swim!</p>
             </div>
@@ -39,11 +39,11 @@
         <!-- GUIDE SECTION -->
          <div class="guide-section">
         <div class="info-card">
-            <img src="images/per.jpg">
+            <img src="images/guide-pic1.png">
             <div class="guide-info">
             <h3>Your guide</h3>
-            <p>"I have lived at Torshov for over 30 years, so I can show you all of its best parts and hidden secrets."</p>
-            <h4>Per Harald Borgen</h4>
+            <p>"I have lived in Nebraska city my entire life , if theres something you would like to know or see I'm your guy"</p>
+            <h4>Jacob Cash</h4>
             </div>
             
         </div>
